Hide x overflow on home page to avoid scroll bars on animations

--- a/client/src/scss/partials/_home.scss
+++ b/client/src/scss/partials/_home.scss
@@ -42,6 +42,7 @@ nav {
   width: 100%;
   height: calc(100vh - 75px);
   overflow-y: auto;
+  overflow-x: hidden;
   position: relative;
   top: 75px;
 }
